# caja-rename

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  setup.py
cajarename/: appdata.py  titlecase.py
data/: CMakeLists.txt  caja-rename.ui  caja-rename.xml  libcaja-rename.caja-extension.in
data/usr/share/caja-python/extensions/: caja-rename.py
data/usr/share/cajarename/: cajarename.glade
debian/: changelog  control  copyright  rules  watch
po/: CMakeLists.txt  ar.po  ca.po  caja-rename.pot  cajarename.pot  cs.po  de.po  el.po  en_GB.po  es.po  fr.po  hr.po  hu.po  ku.po  lt.po  nb_NO.po  nl.po  oc.po  pt.po  pt_BR.po  ru.po  sl.po  ta.po  tr.po  uk.po  zh_Hans.po
src/: CMakeLists.txt  caja-rename.c  caja-rename.h  rename.c  titlecase.h
